--- a/app/views/grupos/show.html.erb
+++ b/app/views/grupos/show.html.erb
@@ -1,4 +1,4 @@
-<%= link_to 'Voltar', grupos_path, :class => 'btn' %>
+<%= link_to 'Voltar', grupos_path %>
 <% @grupos.each do |grupo| %>
 <h2>Restaurantes do Grupo - <a name="<%= grupo.id %>"><%= grupo.nome %></a></h2>
 
