--- a/app/views/votos/home.html.erb
+++ b/app/views/votos/home.html.erb
@@ -23,6 +23,7 @@ $("select#grupo_id").change(function(){
   var grupo_id = $(this).find('option:selected').val();
   if(grupo_id !== ""){
     $('select[rel=popover]').popover('hide');
+    $('a[rel=popover]').popover('hide');
   }
 });
 </script>
